remove red linds in lftpcli